# rosmap-processing

./: .env.example  .gitignore  CLI_REFERENCE.md  README.md  RESTRUCTURING_PLAN.md  TEST_SUITE_SUMMARY.md  analysis.md  config.yaml  container_pixi.def  install_deps.R  pixi.toml  pyproject.toml  test_pipeline.py  test_quick.py  test_refactored_local.py
config/: README.md  default_config.yaml
scripts/: compare_gene_lists.py
slurm/: download_seaad.sh  extract_gene_names.sh  inspect_counts.sh  lieke_allgenes_hvg.sh  lieke_allgenes_hvg_postnorm.sh  lieke_hvg.sh  mathys2023_for_adprs.sh  regular_hvg.sh  regular_hvg_postnorm.sh  rosmap_mathys_genes.sh  rosmap_top1k_genes.sh  run_all.sh  run_all_seaad.sh  seaad_processing.sh  seaad_rosmap_genes.sh  test_pixi.sh
src/: add_metadata.py  check_h5ad.py  combine_h5ad.py  download_rosmap.py  download_seaad.sh  download_synapse.ipynb  download_synapse.py  fix_categories.py  match_columns.py  run_all.sh  run_all_seaad.sh  scanpy_pipeline.py  setup_run.py
src/convert_R/: h5Seurat_to_h5ad.R  install_deps.R  rds_to_h5Seurat.R
src/mathys2019_DEG/: mathys2019_DEG.py
src/rosmap_processing/: __init__.py  __main__.py
src/rosmap_processing/cli/: __init__.py  main.py
src/rosmap_processing/core/: column_mapping.py  combine.py  scanpy_pipeline.py
src/rosmap_processing/data/: __init__.py  category_fix.py  download.py  metadata.py
src/rosmap_processing/pipelines/: __init__.py  mathys2023_for_adprs.py
src/rosmap_processing/utils/: __init__.py  config.py  constants.py  logging.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_core_column_mapping.py  test_core_combine.py  test_data_category_fix.py  test_integration.py  test_utils_constants.py  test_utils_logging.py  test_utils_validation.py
